# opti_scout

./: .gitignore  README.md  build_model.py  classes.py  project-description.md  pyproject.toml  run_model_standalone.py  tomtest.xlsx  utilities.py
.github/workflows/: test.yaml
data/: testdata_ref.json
interfaces/: app.py  cli.py
opti_scout/: build_model.py  classes.py  readdata.py  utilities.py
tests/: conftest.py  test_build_model.py  test_classes.py  test_end_to_end.py
tests/data/: 20260218response.json  20260218response_output_v1.txt  20260218response_output_v3.txt  20260218response_small.json  20260218response_v1.json  20260218response_v2.json  20260218response_v3.json  20260218response_v4.json  20260218response_v5.json  20260218response_v6.json  20260218response_v7.json  jsonreftranslated.json  testdata_ref.json  tom_full_periodeid.json
tests/logs/: 20260218response.txt  20260218response_output_v3.txt  20260218response_output_v3_41min.txt  20260218response_output_v5.txt  20260218response_output_v7.txt  20260218response_small.lp  20260223response_output_v2.txt  full prob 20260218response_output_v4.txt
tests/modelfiles/: 20260218response_small.lp
tests/output/: 20260218response_small.xlsx  20260218response_small_all.xlsx  20260218response_v1.xlsx  20260218response_v1_unassigned.xlsx  20260218response_v2.xlsx  20260218response_v2_all.xlsx  20260218response_v2_unassigned.xlsx  20260218response_v3.xlsx  20260218response_v3_unassigned.xlsx  group_info.xlsx  session_info.xlsx  tomtest - Copy.xlsx
